--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@apollo/client": "^3.13.9",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^7.1.16",
+    "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.23",
+    "@react-navigation/stack": "^7.4.5",
     "apollo3-cache-persist": "^0.15.0",
     "expo": "~53.0.20",
     "expo-linear-gradient": "^14.1.5",
@@ -21,6 +22,7 @@
     "graphql": "^16.11.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1"
   },
